--- a/m/panel-tasks.html
+++ b/m/panel-tasks.html
@@ -1,7 +1,7 @@
     <div class='nav__ID'  >
         <span>Screening</span>
         <ul>
-            <li><a class="small"  href=?/hush-s-demographics-data>Demographics</a></li>
+            <li><a class="small"  href=?/hush-s-demographic-data>Demographic Questions</a></li>
             <li><a class="small"  href=?/hush-s-isi-data>Insomnia Severity Index</a></li>
             <li><a class="small"  href=?/hush-s-stop-bang-data>STOP-BANG Sleep Apnea Questionnaire</a></li>
             <li><a class="small"  href=?/hush-s-health-profile-data>Health Profile</a></li>
