--- a/m/panel-tasks.html
+++ b/m/panel-tasks.html
@@ -6,7 +6,7 @@
             <li><a class="small"  href=?/hush-s-stop-bang-data>STOP-BANG Sleep Apnea Questionnaire</a></li>
             <li><a class="small"  href=?/hush-s-health-profile-data>Health Profile</a></li>
             <li><a class="small"  href=?/hush-s-caffeine-data>Caffeine intake</a></li>
-            <li><a class="small"  href=?/hush-s-alcohol-data>Alcohol Screen </a></li>
+            <li><a class="small"  href=?/hush-s-alcohol-data>Alcohol Screen (Good image of standard drinks and scoring info missing)</a></li>
         </ul>
         <br>
         <span>Baseline</span>
@@ -16,7 +16,7 @@
             <li><a class="small"  href=?/hush-bl-ess-data>Epworth Sleepiness Scale</a></li>
             <li><a class="small"  href=?/hush-bl-nprs-data>The Numeric Pain Rating Scale</a></li>
             <li><a class="small"  href=?/hush-bl-dass-data>Depression, Anxiety and Stress Scales (DASS-21)</a></li>
-            <li><a class="small"  href=?/hush-bl-whoqol-brev-data>WHOQOL-BREF</a></li>
+            <li><a class="small"  href=?/hush-bl-whoqol-bref-data>WHOQOL-BREF</a></li>
             <li><a class="small"  href=?/hush-bl-health-profile-data>Health Profile</a></li>
             <li><a class="small"  href=?/hush-bl-caffeine-data>Caffeine intake</a></li>
             <li><a class="small"  href=?/hush-bl-alcohol-data>Alcohol Screen</a></li>
@@ -33,7 +33,7 @@
             <li><a class="small"  href=?/hush-w2-ess-data>Epworth Sleepiness Scale</a></li>
             <li><a class="small"  href=?/hush-w2-nprs-data>The Numeric Pain Rating Scale</a></li>
             <li><a class="small"  href=?/hush-w2-dass-data>Depression, Anxiety and Stress Scales (DASS-21)</a></li>
-            <li><a class="small"  href=?/hush-w2-whoqol-brev-data>WHOQOL-BREF</a></li>
+            <li><a class="small"  href=?/hush-w2-whoqol-bref-data>WHOQOL-BREF</a></li>
             <li><a class="small"  href=?/hush-w2-health-profile-data>Health Profile</a></li>
             <li><a class="small"  href=?/hush-w2-caffeine-data>Caffeine intake</a></li>
             <li><a class="small"  href=?/hush-w2-alcohol-data>Alcohol Screen</a></li>
@@ -50,7 +50,7 @@
             <li><a class="small"  href=?/hush-w4-ess-data>Epworth Sleepiness Scale</a></li>
             <li><a class="small"  href=?/hush-w4-nprs-data>The Numeric Pain Rating Scale</a></li>
             <li><a class="small"  href=?/hush-w4-dass-data>Depression, Anxiety and Stress Scales (DASS-21)</a></li>
-            <li><a class="small"  href=?/hush-w4-whoqol-brev-data>WHOQOL-BREF</a></li>
+            <li><a class="small"  href=?/hush-w4-whoqol-bref-data>WHOQOL-BREF</a></li>
             <li><a class="small"  href=?/hush-w4-health-profile-data>Health Profile</a></li>
             <li><a class="small"  href=?/hush-w4-caffeine-data>Caffeine intake</a></li>
             <li><a class="small"  href=?/hush-w4-alcohol-data>Alcohol Screen</a></li>
@@ -69,7 +69,7 @@
             <li><a class="small"  href=?/hush-w6-ess-data>Epworth Sleepiness Scale</a></li>
             <li><a class="small"  href=?/hush-w6-nprs-data>The Numeric Pain Rating Scale</a></li>
             <li><a class="small"  href=?/hush-w6-dass-data>Depression, Anxiety and Stress Scales (DASS-21)</a></li>
-            <li><a class="small"  href=?/hush-w6-whoqol-brev-data>WHOQOL-BREF</a></li>
+            <li><a class="small"  href=?/hush-w6-whoqol-bref-data>WHOQOL-BREF</a></li>
             <li><a class="small"  href=?/hush-w6-health-profile-data>Health Profile</a></li>
             <li><a class="small"  href=?/hush-w6-caffeine-data>Caffeine intake</a></li>
             <li><a class="small"  href=?/hush-w6-alcohol-data>Alcohol Screen</a></li>
@@ -87,7 +87,7 @@
             <li><a class="small"  href=?/hush-w8-ess-data>Epworth Sleepiness Scale</a></li>
             <li><a class="small"  href=?/hush-w8-nprs-data>The Numeric Pain Rating Scale</a></li>
             <li><a class="small"  href=?/hush-w8-dass-data>Depression, Anxiety and Stress Scales (DASS-21)</a></li>
-            <li><a class="small"  href=?/hush-w8-whoqol-brev-data>WHOQOL-BREF</a></li>
+            <li><a class="small"  href=?/hush-w8-whoqol-bref-data>WHOQOL-BREF</a></li>
             <li><a class="small"  href=?/hush-w8-health-profile-data>Health Profile</a></li>
             <li><a class="small"  href=?/hush-w8-caffeine-data>Caffeine intake</a></li>
             <li><a class="small"  href=?/hush-w8-alcohol-data>Alcohol Screen</a></li>
@@ -106,7 +106,7 @@
             <li><a class="small"  href=?/hush-w10-ess-data>Epworth Sleepiness Scale</a></li>
             <li><a class="small"  href=?/hush-w10-nprs-data>The Numeric Pain Rating Scale</a></li>
             <li><a class="small"  href=?/hush-w10-dass-data>Depression, Anxiety and Stress Scales (DASS-21)</a></li>
-            <li><a class="small"  href=?/hush-w10-whoqol-brev-data>WHOQOL-BREF</a></li>
+            <li><a class="small"  href=?/hush-w10-whoqol-bref-data>WHOQOL-BREF</a></li>
             <li><a class="small"  href=?/hush-w10-health-profile-data>Health Profile</a></li>
             <li><a class="small"  href=?/hush-w10-caffeine-data>Caffeine intake</a></li>
             <li><a class="small"  href=?/hush-w10-alcohol-data>Alcohol Screen</a></li>
@@ -123,7 +123,7 @@
             <li><a class="small"  href=?/hush-exit-ess-data>Epworth Sleepiness Scale</a></li>
             <li><a class="small"  href=?/hush-exit-nprs-data>The Numeric Pain Rating Scale</a></li>
             <li><a class="small"  href=?/hush-exit-dass-data>Depression, Anxiety and Stress Scales (DASS-21)</a></li>
-            <li><a class="small"  href=?/hush-exit-whoqol-brev-data>WHOQOL-BREF</a></li>
+            <li><a class="small"  href=?/hush-exit-whoqol-bref-data>WHOQOL-BREF</a></li>
             <li><a class="small"  href=?/hush-exit-health-profile-data>Health Profile</a></li>
             <li><a class="small"  href=?/hush-exit-caffeine-data>Caffeine intake</a></li>
             <li><a class="small"  href=?/hush-exit-alcohol-data>Alcohol Screen</a></li>
