--- a/m/panel-tasks.html
+++ b/m/panel-tasks.html
@@ -16,7 +16,7 @@
             <li><a class="small"  href=?/hush-bl-ess-data>Epworth Sleepiness Scale</a></li>
             <li><a class="small"  href=?/hush-bl-nprs-data>The Numeric Pain Rating Scale</a></li>
             <li><a class="small"  href=?/hush-bl-dass-data>Depression, Anxiety and Stress Scales (DASS-21)</a></li>
-            <li><a class="small"  href=?/hush-bl-whoqol-bref-data>WHOQOL-BREF</a></li>
+            <li><a class="small"  href=?/hush-bl-whoqol-bref-data>WHOQOL-BREF (Please do multiple tests to see I have calculated the scoring correctly.)</a></li>
             <li><a class="small"  href=?/hush-bl-health-profile-data>Health Profile</a></li>
             <li><a class="small"  href=?/hush-bl-caffeine-data>Caffeine intake</a></li>
             <li><a class="small"  href=?/hush-bl-alcohol-data>Alcohol Screen</a></li>
