--- a/m/panel-tasks.html
+++ b/m/panel-tasks.html
@@ -6,7 +6,7 @@
             <li><a class="small"  href=?/hush-s-stop-bang-data>STOP-BANG Sleep Apnea Questionnaire</a></li>
             <li><a class="small"  href=?/hush-s-health-profile-data>Health Profile</a></li>
             <li><a class="small"  href=?/hush-s-caffeine-data>Caffeine intake</a></li>
-            <li><a class="small"  href=?/hush-s-alcohol-data>Alcohol Screen (Good image of standard drinks and scoring info missing)</a></li>
+            <li><a class="small"  href=?/hush-s-alcohol-data>Alcohol Screen <i>(Good image of standard drinks and scoring info missing)</i></a></li>
         </ul>
         <br>
         <span>Baseline</span>
@@ -16,7 +16,7 @@
             <li><a class="small"  href=?/hush-bl-ess-data>Epworth Sleepiness Scale</a></li>
             <li><a class="small"  href=?/hush-bl-nprs-data>The Numeric Pain Rating Scale</a></li>
             <li><a class="small"  href=?/hush-bl-dass-data>Depression, Anxiety and Stress Scales (DASS-21)</a></li>
-            <li><a class="small"  href=?/hush-bl-whoqol-bref-data>WHOQOL-BREF (Please do multiple tests to see if I have done the scoring correctly.)</a></li>
+            <li><a class="small"  href=?/hush-bl-whoqol-bref-data>WHOQOL-BREF <i>(Please do multiple tests to see if I have done the scoring correctly.)</i></a></li>
             <li><a class="small"  href=?/hush-bl-health-profile-data>Health Profile</a></li>
             <li><a class="small"  href=?/hush-bl-caffeine-data>Caffeine intake</a></li>
             <li><a class="small"  href=?/hush-bl-alcohol-data>Alcohol Screen</a></li>
