--- a/m/oq-login.html
+++ b/m/oq-login.html
@@ -3,7 +3,7 @@
 	<div id=page__ID>
 		<div id=panel__ID class="container-fluid" style='max-width:400px'>
 			<div class="text-center panel__ID">
-                    <img style="width:100%" src="images/logo_small.png">
+                    <!--<img style="width:100%" src="images/logo_small.png">-->
                 <h2  class="text-center" >Entry to</h2>
                 <h4 class="text-center" >Questionnaire Portal</h4>
 	            <hr style='border-top:1px solid #fff;'></hr>
