--- a/m/oq-panel.html
+++ b/m/oq-panel.html
@@ -1,7 +1,7 @@
 <div id=page__ID>
 	<div id=panel__ID class="container-fluid" style='max-width:800px'>
 		<div class="text-center panel__ID">
-				<img style="width:50%" src="images/logo_small.png">
+				<!--<img style="width:50%" src="images/logo_small.png">-->
     	  	<hr style='border-top:1px solid #000;'></hr>
     		<h5 class= "text-left ml-5">Please complete each of the following questionnaires.<br><br></h5>
             <div id=items__ID  class= "text-left ml-5"></div>
