--- a/m/oq-setup.html
+++ b/m/oq-setup.html
@@ -36,135 +36,125 @@
             VmInclude:__COMPONENT__/f/form.01.js
 			//-------------------------------------
             var q_list={
-                "Part 1":[
-                "cl-p1-pis-form",
-                "cl-p1-consent-form",
-                "cl-p1-ethnicity-form",
-                "cl-p1-lifestyle-form",
-                "cl-p1-education-form",
-                "cl-p1-sf36-form",
-                "cl-p1-hads-form",
-                "cl-p1-me-shf-form",
-                "cl-p1-ess-form",
-                "cl-p1-isi-form",
-                "cl-p1-psqi-form",
-                "cl-p1-map-form",
+                "Screening":[
+                "hush-pis-form",
+                "hush-consent-form",
+                "hush-s-demographic-form",
+                "hush-s-isi-form",
+                "hush-s-stop-bang-form",
+                "hush-s-health-profile-form",
+                "hush-s-caffeine-form",
+                "hush-s-alcohol-form",
     			],
-                "Baseline Visit":[
-                "cl-bl-ethnicity-form",
-                "cl-bl-lifestyle-form",
-                "cl-bl-ess-form",
-                "cl-bl-sf36-form",
-                "cl-bl-me-form",
-                "cl-bl-hads-form",
+                "Baseline":[
+                "hush-bl-isi-form",
+                "hush-bl-psqi-form",
+                "hush-bl-ess-form",
+                "hush-bl-nprs-form",
+                "hush-bl-dass-form",
+                "hush-bl-whoqol-bref-form",
+                "hush-bl-health-profile-form",
+                "hush-bl-caffeine-form",
+                "hush-bl-alcohol-form",
+                "hush-bl-driving-form",
+                "hush-bl-physical-activity-form",
+                "hush-bl-minor-illnesses-form",
     			],
-                "Lab Visit 1 Day 1 Neurocog":[
-                "cl-v1-d1-nt-lct-form",
-                "cl-v1-d1-nt-nback2-form",
-                "cl-v1-d1-nt-dsst-form",
-                "cl-v1-d1-nt-stroop-colour-form",
-                "cl-v1-d1-nt-stroop-text-form",
-                "cl-v1-d1-nt-ftt-form",
+                "Week 2":[
+                "hush-w2-isi-form",
+                "hush-w2-psqi-form",
+                "hush-w2-ess-form",
+                "hush-w2-nprs-form",
+                "hush-w2-dass-form",
+                "hush-w2-whoqol-bref-form",
+                "hush-w2-health-profile-form",
+                "hush-w2-caffeine-form",
+                "hush-w2-alcohol-form",
+                "hush-w2-driving-form",
+                "hush-w2-physical-activity-form",
+                "hush-w2-minor-illnesses-form",
+                "hush-w2-adverse-effects-form",
                 ],
-    			"Lab Visit 1 Day 1 Alertness":[
-                "cl-v1-d1-t1-kss-form",
-                "cl-v1-d1-t2-kss-form",
-                "cl-v1-d1-t3-kss-form",
-                "cl-v1-d1-t4-kss-form",
-                "cl-v1-d1-t5-kss-form",
+                "Week 4":[
+                "hush-w4-isi-form",
+                "hush-w4-psqi-form",
+                "hush-w4-ess-form",
+                "hush-w4-nprs-form",
+                "hush-w4-dass-form",
+                "hush-w4-whoqol-bref-form",
+                "hush-w4-health-profile-form",
+                "hush-w4-caffeine-form",
+                "hush-w4-alcohol-form",
+                "hush-w4-driving-form",
+                "hush-w4-physical-activity-form",
+                "hush-w4-minor-illnesses-form",
+                "hush-w4-adverse-effects-form",
+                "hush-w4-sleep-diary-form",
+                "hush-w4-geneactive-form"
                 ],
-    			"Lab Visit 1 Day 2 Alertness":[
-                "cl-v1-d2-t1-kss-form",
-                "cl-v1-d2-t2-kss-form",
-                "cl-v1-d2-t3-kss-form",
-                "cl-v1-d2-t4-kss-form",
-                "cl-v1-d2-t5-kss-form",
-                "cl-v1-d2-t6-kss-form",
-                "cl-v1-d2-t7-kss-form",
+                "Week 6":[
+                "hush-w6-isi-form",
+                "hush-w6-psqi-form",
+                "hush-w6-ess-form",
+                "hush-w6-nprs-form",
+                "hush-w6-dass-form",
+                "hush-w6-whoqol-bref-form",
+                "hush-w6-health-profile-form",
+                "hush-w6-caffeine-form",
+                "hush-w6-alcohol-form",
+                "hush-w6-driving-form",
+                "hush-w6-physical-activity-form",
+                "hush-w6-minor-illnesses-form",
+                "hush-w6-adverse-effects-form",
                 ],
-                "Lab Visit 1 Day 3 Neurocog - Morning":[
-                "cl-v1-d3-ntm-lct-form",
-                "cl-v1-d3-ntm-nback2-form",
-                "cl-v1-d3-ntm-dsst-form",
-                "cl-v1-d3-ntm-stroop-colour-form",
-                "cl-v1-d3-ntm-stroop-text-form",
+                "Week 8":[
+                "hush-w8-isi-form",
+                "hush-w8-psqi-form",
+                "hush-w8-ess-form",
+                "hush-w8-nprs-form",
+                "hush-w8-dass-form",
+                "hush-w8-whoqol-bref-form",
+                "hush-w8-health-profile-form",
+                "hush-w8-caffeine-form",
+                "hush-w8-alcohol-form",
+                "hush-w8-driving-form",
+                "hush-w8-physical-activity-form",
+                "hush-w8-minor-illnesses-form",
+                "hush-w8-adverse-effects-form",
+                "hush-w8-sleep-diary-form",
+                "hush-w8-geneactive-form"
                 ],
-                "Lab Visit 1 Day 3 Neurocog - Afternoon":[
-                "cl-v1-d3-nt-lct-form",
-                "cl-v1-d3-nt-nback2-form",
-                "cl-v1-d3-nt-dsst-form",
-                "cl-v1-d3-nt-stroop-colour-form",
-                "cl-v1-d3-nt-stroop-text-form",
-                "cl-v1-d3-nt-ftt-form",
+                "Week 10":[
+                "hush-w10-isi-form",
+                "hush-w10-psqi-form",
+                "hush-w10-ess-form",
+                "hush-w10-nprs-form",
+                "hush-w10-dass-form",
+                "hush-w10-whoqol-bref-form",
+                "hush-w10-health-profile-form",
+                "hush-w10-caffeine-form",
+                "hush-w10-alcohol-form",
+                "hush-w10-driving-form",
+                "hush-w10-physical-activity-form",
+                "hush-w10-minor-illnesses-form",
+                "hush-w10-adverse-effects-form",
                 ],
-    			"Lab Visit 1 Day 3 Alertness":[
-                "cl-v1-d3-t1-kss-form",
-                "cl-v1-d3-t2-kss-form",
-                "cl-v1-d3-t3-kss-form",
-                "cl-v1-d3-t4-kss-form",
-                "cl-v1-d3-t5-kss-form",
-                "cl-v1-d3-t6-kss-form",
-                "cl-v1-d3-t7-kss-form",
-                ],
-                "Lab Visit 1 Day 4 Neurocog":[
-                "cl-v1-d4-nt-ftt-form",
-                ],
-    			"Lab Visit 1 Day 4 Alertness":[
-                "cl-v1-d4-t1-kss-form",
-                ],
-                "Lab Visit 2 Day 1 Neurocog":[
-                "cl-v2-d1-nt-lct-form",
-                "cl-v2-d1-nt-nback2-form",
-                "cl-v2-d1-nt-dsst-form",
-                "cl-v2-d1-nt-stroop-colour-form",
-                "cl-v2-d1-nt-stroop-text-form",
-                "cl-v2-d1-nt-ftt-form",
-                ],
-    			"Lab Visit 2 Day 1 Alertness":[
-                "cl-v2-d1-t1-kss-form",
-                "cl-v2-d1-t2-kss-form",
-                "cl-v2-d1-t3-kss-form",
-                "cl-v2-d1-t4-kss-form",
-                "cl-v2-d1-t5-kss-form",
-                ],
-    			"Lab Visit 2 Day 2 Alertness":[
-                "cl-v2-d2-t1-kss-form",
-                "cl-v2-d2-t2-kss-form",
-                "cl-v2-d2-t3-kss-form",
-                "cl-v2-d2-t4-kss-form",
-                "cl-v2-d2-t5-kss-form",
-                "cl-v2-d2-t6-kss-form",
-                "cl-v2-d2-t7-kss-form",
-                ],
-                "Lab Visit 1 Day 3 Neurocog - Morning":[
-                "cl-v2-d3-ntm-lct-form",
-                "cl-v2-d3-ntm-nback2-form",
-                "cl-v2-d3-ntm-dsst-form",
-                "cl-v2-d3-ntm-stroop-colour-form",
-                "cl-v2-d3-ntm-stroop-text-form",
-                ],
-                "Lab Visit 2 Day 3 Neurocog - Afternoon":[
-                "cl-v2-d3-nt-lct-form",
-                "cl-v2-d3-nt-nback2-form",
-                "cl-v2-d3-nt-dsst-form",
-                "cl-v2-d3-nt-stroop-colour-form",
-                "cl-v2-d3-nt-stroop-text-form",
-                "cl-v2-d3-nt-ftt-form",
-                ],
-    			"Lab Visit 2 Day 3 Alertness":[
-                "cl-v2-d3-t1-kss-form",
-                "cl-v2-d3-t2-kss-form",
-                "cl-v2-d3-t3-kss-form",
-                "cl-v2-d3-t4-kss-form",
-                "cl-v2-d3-t5-kss-form",
-                "cl-v2-d3-t6-kss-form",
-                "cl-v2-d3-t7-kss-form",
-                ],
-                "Lab Visit 2 Day 4 Neurocog":[
-                "cl-v2-d4-nt-ftt-form",
-                ],
-    			"Lab Visit 2 Day 4 Alertness":[
-                "cl-v2-d4-t1-kss-form",
+                "Exit":[
+                "hush-e-isi-form",
+                "hush-e-psqi-form",
+                "hush-e-ess-form",
+                "hush-e-nprs-form",
+                "hush-e-dass-form",
+                "hush-e-whoqol-bref-form",
+                "hush-e-health-profile-form",
+                "hush-e-caffeine-form",
+                "hush-e-alcohol-form",
+                "hush-e-driving-form",
+                "hush-e-physical-activity-form",
+                "hush-e-minor-illnesses-form",
+                "hush-e-adverse-effects-form",
+                "hush-e-sleep-diary-form",
+                "hush-e-geneactive-form"
                 ],
             }
             var questionniare_list={}
