--- a/0-oq/footer.html
+++ b/0-oq/footer.html
@@ -3,14 +3,14 @@
         <div class=row>
             <div class="col-sm">
                 <div style="display:table;height:100%;width:100%;">
-                    <div style='display:table-cell;vertical-align:middle'>All rights reserved. The University of Sydney and Woolcock Institute of Medical Research 2019. <a target="_blank" style="color:#000" href="https://spardac.wappsystem.com.au">Powered by Wappsystem</a></div>
+                    <div style='display:table-cell;vertical-align:middle'>All rights reserved 2020/2021. The University of Sydney and LAMBERT INITIATIVE for Cannabinoid Therapeutics<br><a target="_blank" style="color:#000" href="https://spardac.wappsystem.com.au">Powered by Wappsystem</a></div>
                 </div>
             </div>
             <div class="col-sm">
-                <img src='images/university-of-sydney-logo.png' >
+                <img src='__CURRENT_PATH__/../../images/university-of-sydney-logo.png' >
             </div>
             <div class="col-sm">
-                <img src='images/woolcock-logo.png' />
+                <img src='__CURRENT_PATH__/../../images/lambert.png' />
             </div>
         </div>
     </div>
@@ -34,7 +34,7 @@
             color: #000;
             padding: 12px;
             background-color: #fff;
-            font-size:10`0%;
+            font-size:100%;
             text-align: center;
         }
         @media screen and (max-width: 1200px){
