--- a/m/panel-export-week10.html
+++ b/m/panel-export-week10.html
@@ -7,21 +7,21 @@
         	<span id=elapsed__ID style='float:right'></span>
 		</div>
         <section id=panel__ID>
-			<h3>Hush Study Enrolled Export</h3>
+			<h3>Week 10 Export</h3>
 			<span>Select the fields to export by clicking on each form links.</span><br>
 			<div class='nav__ID'>
         		<ul>
 					<li title="Manage participant - Add new. Data entry for single participant. Setup questionnaires."><a href=?/participant-data>Participants</a></li>
-					<p id=participant-data__ID class="small font-italic text-muted mt-1">No setup found. Will export all fields.</p>
+					<p id=participant-data__ID class="small font-italic text-muted mt-1">No setup found. All fields exported.</p>
 				</ul>
-        	VmInclude:__CURRENT_PATH__/panel-tasks-export-v1-enrolled.html
+        	VmInclude:__CURRENT_PATH__/panel-export-week10-task.html
         </section>
 	</div>
 	VmInclude:__COMPONENT__/m/model.01.html
     <script>
         function F__ID(){
 			//-------------------------------------
-			var output_file_name="Hush Study Enrolled Export";
+			var output_file_name="Hush Study Week 10 Export";
 			var enrolled_only=true
 			VmInclude: __CURRENT_PATH__/export.js
 			//-------------------------------------
