--- a/m/panel-export-week8.html
+++ b/m/panel-export-week8.html
@@ -7,22 +7,22 @@
         	<span id=elapsed__ID style='float:right'></span>
 		</div>
         <section id=panel__ID>
-			<h3>Screened Export</h3>
+			<h3>Week 8 Export</h3>
 			<span>Select the fields to export by clicking on each form links.</span><br>
-        	<div class='nav__ID'>
+			<div class='nav__ID'>
         		<ul>
 					<li title="Manage participant - Add new. Data entry for single participant. Setup questionnaires."><a href=?/participant-data>Participants</a></li>
-					<p id=participant-data__ID class="small font-italic text-muted mt-1">No setup found. Will export all fields.</p>
+					<p id=participant-data__ID class="small font-italic text-muted mt-1">No setup found. All fields exported.</p>
 				</ul>
-        	VmInclude:__CURRENT_PATH__/panel-tasks-export-screened.html
+        	VmInclude:__CURRENT_PATH__/panel-export-week8-task.html
         </section>
 	</div>
 	VmInclude:__COMPONENT__/m/model.01.html
     <script>
         function F__ID(){
 			//-------------------------------------
-			var output_file_name="Hush Study Screened Export";
-			var enrolled_only=false;
+			var output_file_name="Hush Study Week 8 Export";
+			var enrolled_only=true
 			VmInclude: __CURRENT_PATH__/export.js
 			//-------------------------------------
 		}
