--- a/m/panel-main.html
+++ b/m/panel-main.html
@@ -25,9 +25,17 @@
 						<li ><a href=?/notes-data>List of all notes</a></li>
 						<p class="small font-italic text-muted mt-1">Notes can be added to every record.<br>Click on field <u>Notes</u><br>Latest entry shown</p>
 					</ul>
-					<br>				
-					</div>
-        	</div>
+					<br>
+					<span>Pre screening records</span>
+					<ul>
+						<li><a class="small"  href=?/panel-main-recruitment>All</a></li>
+						<li><a class="small"  href=?/panel-main-recruitment-eligible>Eligible</a></li>
+						<li><a class="small"  href=?/panel-main-recruitment-non-eligible>Non Eligible</a></li>
+					</ul>
+					<br>		
+				</div>
+			</div>
+	
         	VmInclude:__CURRENT_PATH__/panel-tasks.html
         </section>
     </div>
