--- a/m/panel-tasks.html
+++ b/m/panel-tasks.html
@@ -1,6 +1,8 @@
     <div class='nav__ID'  >
         <span>Screening</span>
         <ul>
+            <li><a class="small"  href=?/hush-pis-data>Patient Information Sheet</a></li>
+            <li><a class="small"  href=?/hush-consent-data>Consent Form</a></li>
             <li><a class="small"  href=?/hush-s-demographic-data>Demographic Questions</a></li>
             <li><a class="small"  href=?/hush-s-isi-data>Insomnia Severity Index</a></li>
             <li><a class="small"  href=?/hush-s-stop-bang-data>STOP-BANG Sleep Apnea Questionnaire</a></li>
