--- a/m/oq-setup.html
+++ b/m/oq-setup.html
@@ -37,8 +37,8 @@
 			//-------------------------------------
             var q_list={
                 "Screening":[
-                "hush-pis-form",
-                "hush-consent-form",
+                "hush-s-pis-form",
+                "hush-s-consent-form",
                 "hush-s-demographic-form",
                 "hush-s-isi-form",
                 "hush-s-stop-bang-form",
