--- a/m/panel-tasks.html
+++ b/m/panel-tasks.html
@@ -9,6 +9,7 @@
             <li><a class="small"  href=?/hush-s-health-profile-data>Health Profile</a></li>
             <li><a class="small"  href=?/hush-s-caffeine-data>Caffeine intake</a></li>
             <li><a class="small"  href=?/hush-s-alcohol-data>Alcohol Screen <i>(Good image of standard drinks and scoring info missing)</i></a></li>
+            <li><a class="small"  href=?/hush-s-thank-you-form>Thanks You</a></li>
         </ul>
         <br>
         <span>Baseline</span>
