--- a/m/oq-panel.html
+++ b/m/oq-panel.html
@@ -2,9 +2,10 @@
 	<div id=panel__ID class="container-fluid" style='max-width:800px'>
 		<div class="text-center panel__ID">
 				<!--<img style="width:50%" src="images/logo_small.png">-->
-    	  	<hr style='border-top:1px solid #000;'></hr>
-    		<h5 class= "text-left ml-5">Please complete each of the following questionnaires.<br><br></h5>
-            <div id=items__ID  class= "text-left ml-5"></div>
+				<h5 class= "text-left ml-5" id=congratulation__ID style='color:lawngreen;font-size:1.2rem'></h5>
+				<hr style='border-top:1px solid #000;'></hr>
+			  <h5 class= "text-left ml-5">Please complete each of the following questionnaires.<br><br></h5>
+			  <div id=items__ID  class= "text-left ml-5"></div>
             <h5 class= "">
                 Once they are completed please click on ‘sign-out’ below, to exit the system. <br>Thank you!<br><br>
             </h5>
@@ -43,6 +44,7 @@
 		    var ids=id_list.split(',');
 			var txt="<ul>";
 			var count=0;
+			var tot_count=0;
 			var quest=false;
 		    //----------------------------------
 		    for(var i=0;i<ids.length;i++){
@@ -62,6 +64,7 @@
 		    $('#items__ID').html(txt);
 		    //----------------------------------
 			$('#items__ID li').each(function(){
+				tot_count++;
 		        var $li=$(this);
 				$li.removeClass('li_allowed__ID')
 				$li.addClass('li_not_allowed__ID')
@@ -104,6 +107,9 @@
 		        if(status[m].rid==0){
 					count++;
 					quest=true
+					console.log(tot_count+" - "+count)
+					var completed=(((count-1)/tot_count)*100).toFixed(0);
+					if(count>1) $('#congratulation__ID').html("Congratulation! You have already completed "+completed+"% of the questionnaires<br><br>" )
 					$li.removeClass('li_not_allowed__ID')
 					$li.addClass('li_allowed__ID')
 		            var task_name=$li.html();
