--- a/m/oq-panel.html
+++ b/m/oq-panel.html
@@ -109,7 +109,7 @@
 					quest=true
 					console.log(tot_count+" - "+count)
 					var completed=(((count-1)/tot_count)*100).toFixed(0);
-					if(count>1) $('#congratulation__ID').html("Congratulation! You have already completed "+completed+"% of the questionnaires<br><br>" )
+					if(count>1) $('#congratulation__ID').html("Congratulations! You have already completed "+completed+"% of the questionnaires<br><br>" )
 					$li.removeClass('li_not_allowed__ID')
 					$li.addClass('li_allowed__ID')
 		            var task_name=$li.html();
