--- a/m/oq-setup.html
+++ b/m/oq-setup.html
@@ -59,6 +59,11 @@
                 "hush-bl-driving-form",
                 "hush-bl-physical-activity-form",
                 "hush-bl-minor-illnesses-form",
+                "hush-bl-letter-cancellation-form",
+                "hush-bl-dsst-form",
+                "hush-bl-nback2-form",
+                "hush-bl-stroop-text-form",
+                "hush-bl-stroop-colour-form",                
     			],
                 "Week 2":[
                 "hush-w2-isi-form",
@@ -149,6 +154,11 @@
                 "hush-e-physical-activity-form",
                 "hush-e-minor-illnesses-form",
                 "hush-e-adverse-effects-form",
+                "hush-e-letter-cancellation-form",
+                "hush-e-dsst-form",
+                "hush-e-nback2-form",
+                "hush-e-stroop-text-form",
+                "hush-e-stroop-colour-form",
                 ],
             }
             var questionniare_list={}
