--- a/m/panel-tasks.html
+++ b/m/panel-tasks.html
@@ -26,6 +26,11 @@
             <li><a class="small"  href=?/hush-bl-driving-data>Driving questions</a></li>
             <li><a class="small"  href=?/hush-bl-physical-activity-data>Physical Activity and Sports Performance</a></li>
             <li><a class="small"  href=?/hush-bl-minor-illnesses-data>Susceptibility to Minor illnesses</a></li>
+            <li><a class="small"  href=?/hush-bl-letter-cancellation-data>Letter Cancellation Test</a></li>
+            <li><a class="small"  href=?/hush-bl-dsst-data>Digit Symbol Substitution Task</a></li>
+            <li><a class="small"  href=?/hush-bl-nback2-data>2-Back</a></li>
+            <li><a class="small"  href=?/hush-bl-stroop-text-data>Stroop Text</a></li>
+            <li><a class="small"  href=?/hush-bl-stroop-colour-data>Stroop Colour</a></li>
         </ul>
     </div>
     <div class='nav__ID'  >
@@ -136,6 +141,11 @@
             <li><a class="small"  href=?/hush-e-adverse-effects-data>Adverse Effects</a></li>
             <li><a class="small"  href=?/hush-e-sleep-diary-data>Sleep Diary</a></li>
             <li><a class="small"  href=?/hush-e-geneactive-data>GENEActive Actigraphy watch</a></li>
+            <li><a class="small"  href=?/hush-e-letter-cancellation-data>Letter Cancellation Test</a></li>
+            <li><a class="small"  href=?/hush-e-dsst-data>Digit Symbol Substitution Task</a></li>
+            <li><a class="small"  href=?/hush-e-nback2-data>2-Back</a></li>
+            <li><a class="small"  href=?/hush-e-stroop-text-data>Stroop Text</a></li>
+            <li><a class="small"  href=?/hush-e-stroop-colour-data>Stroop Colour</a></li>
         </ul>
     </div>
 
